correct gap in fourth section , add styles to tag img

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,8 @@ h6 {
 }
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 .section {
   padding: 120px 0;
@@ -219,18 +221,18 @@ img {
   border-radius: 0px 0px 4px 4px;
 }
 .third-section-card {
-  padding: 32px 0;
+  padding: 32px 16px;
 }
 
 /* Fourth-setion */
 .fourth-section-flex-cont {
   display: flex;
   flex-wrap: wrap;
-  row-gap: 24px;
-  column-gap: 48px;
+  row-gap: 48px;
+  column-gap: 24px;
 }
 .fourth-section-list {
-  flex-basis: calc((100% - 48px) / 3);
+  width: calc((100% - 48px) / 3);
   border: 1px solid #e7e9fc;
   border-top: none;
 }
